# termaconfig

./: .gitignore  CHANGELOG.md  README.md  cog.toml  devenv.nix  devenv.yaml  example-config.toml  example-spec.toml  example.py  pyproject.toml
.github/workflows/: auto-publish.yml
termaconfig/: __init__.py  configtables.py  parser.py  utils.py
tests/: test_example_set.py  utils.py
tests/valid-configs/: example-config.toml  example-spec.toml
zenconfig/: __init__.py  configtables.py  errortree.py  exceptions.py  parser.py  utils.py
